# archscope

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md
examples/: README.md  autoregressive_flower.py  diffusion_flower.py  dit_latent_diffusion.py  flow_matching.py  prediction_targets.py  quickstart.py  qwen3_block.py  training_methods.py  transformer_block.py  wan_vace.py
examples/assets/flower/: NOTICE.md
examples/lingbot_va/: common.py  fig01_system.py  fig02_forward.py  fig03_block.py  fig04_attention.py  fig05_mask.py  fig06_mot_paper.py  fig07_paper_vs_code.py  fig08_training.py  fig09_model_structure.py  fig10_ar_diffusion.py  fig10a_structure.py  fig10b_illustration.py  fig11a_vae_structure.py  fig11b_vae_illustration.py
examples/lingbot_va/assets/: make_motion.py
examples/wan_vace_deep/: README.md  common.py  fig01_system_flowmatch.py  fig02_patchify_rope.py  fig03_conditioning.py  fig04_ditblock.py  fig05_self_attention.py  fig06_cross_attention.py  fig07_adaln.py  fig08_vace_context.py  fig09_vace_branch.py  fig10_vace_block.py  fig11_injection.py  fig12_vace_illustration.py
src/archscope/: __init__.py  containers.py  diagram.py  edges.py  geom.py  node.py  panels.py  style.py  svg.py  text.py
tests/: test_routing.py
