[project]
name = "archscope"
version = "0.1.0"
description = "Publication-quality, hierarchical figures of model architectures and training methods — built for the workflow: an agent reads the code, then draws the figures"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Haozhe Zhang", email = "zhang.hz6666@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7"]
keywords = ["visualization", "neural-networks", "architecture-diagrams",
            "svg", "diffusion-models", "paper-figures"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Repository = "https://github.com/HaozheZhang6/archscope"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archscope"]
